# gecko

./: .gitignore  Cargo.toml  LICENSE.txt  README.md
examples/: hello_world.gk  hello_world.lang  numbers.gk  testing.gk
gecko_compiler/: Cargo.toml
gecko_compiler/src/: error.rs  lib.rs  tree_type.rs  type.rs
gecko_compiler/src/codegen/: cranelift.rs  ir.rs  mod.rs
gecko_compiler/src/symbol/: function.rs  mod.rs  variable.rs
gecko_compiler/src/symbols/: mod.rs  variable.rs
gecko_parser/: Cargo.toml
gecko_parser/src/: ast.rs  grammar.pest  lib.rs  precedence.rs  token.rs
gecko_parser/src/expression/: binary_operator.rs  boolean.rs  byte.rs  character.rs  float.rs  identifier.rs  integer.rs  mod.rs  string.rs
gecko_parser/src/node/: block.rs  file.rs  mod.rs  output.rs  parameter.rs  parameter_list.rs  term.rs  type_specifier.rs
gecko_parser/src/statement/: expression_statement.rs  function_definition.rs  mod.rs  return_statement.rs  variable_declaration.rs  variable_initialisation.rs
src/: main.rs
src/parser/: ast.rs  grammar.pest  grammar.rs
