[package]
name = "gecko"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
  "gecko_parser",
  "gecko_compiler"
]

[dependencies]
gecko_parser = { path = "./gecko_parser" }
gecko_compiler = { path = "./gecko_compiler" }

colored = "2.0.0"
