[package]
name = "gecko_compiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib"]

[dependencies]
gecko_parser = { path = "../gecko_parser" }

cranelift-frontend = "0.85.1"
cranelift-codegen = "0.85.1"
enum_dispatch = "0.3.8"
colored = "2.0.0"